# orion

./: .gitignore  README.md  flake.nix  index.html  pyproject.toml
server/model/: scratch.onnx
src/: cnn_scratch.py  scratch.py
src/utils/: connex.py  prediction.py  splits.py
web/: App.tsx  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  wrangler.jsonc  wrangler.toml
web/components/: Benefits.tsx  DatasetPreview.tsx  FAQs.tsx  Features.tsx  FinalAction.tsx  Footer.tsx  Header.tsx  Hero.tsx  LineChart.tsx  ModelComparison.tsx  PerformanceMetrics.tsx  SocialProof.tsx  Statistics.tsx  TechStack.tsx  Testimonials.tsx  Workflow.tsx
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/analysis/: AnalysisPage.tsx
web/src/components/dashboard/: DashboardPage.tsx
web/src/components/history/: HistoryPage.tsx
web/src/components/landing/: LandingPage.tsx
web/src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx  index.ts
web/src/components/models/: ModelSelectionPage.tsx
web/src/components/results/: ResultsPage.tsx
web/src/components/settings/: SettingsPage.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Drawer.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Skeleton.tsx  Tabs.tsx  Toast.tsx  Tooltip.tsx  index.ts
web/src/hooks/: useUpload.ts
web/src/lib/: analysis.ts  inference.ts  models.ts
web/src/types/: index.ts
web/worker/: index.ts  tsconfig.json
(+1 files in other folders)
